harbor_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: harbor
  namespace: harbor
spec:
#  entryPoints:
#    - websecure
  routes:
    - kind: Rule
      match: Host(`h.greenrnd.com`)
      services:
        - kind: Service
          name: harbor-portal
          namespace: harbor
          port: 80
          scheme: http
    - kind: Rule
      match: Host(`h.greenrnd.com`) && (PathPrefix(`/api`) || PathPrefix(`/service`) || PathPrefix(`/v2`) || PathPrefix(`/chartrepo`) || PathPrefix(`/c`))
      services:
        - kind: Service
          name: harbor-core
          namespace: harbor
          port: 80
          scheme: http



#apiVersion: traefik.containo.us/v1alpha1
#kind: IngressRoute
#metadata:
#  name: harbor
#  namespace: harbor
#spec:
#  routes:
#  - match: Host(`h.greenrnd.com`)
#    kind: Rule
#    services:
#      - name: harbor-portal
#        namespace: harbor
#        port: 80
#  - match: Host(`h.greenrnd.com`) && (PathPrefix(`/api`) || PathPrefix(`/service`) || PathPrefix(`/v2`) || PathPrefix(`/chartrepo`) || PathPrefix(`/c`))
#    kind: Rule
#    services:
#      - kind: Service
#        name: harbor-core
#        namespace: harbor
#        port: 80
#        scheme: http
